# warp-content-processor

./: .coverage  .gitignore  .pre-commit-config.yaml  DEVCONTAINER_SETUP.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MASSIVE_MIXED_CONTENT_PLAN.md  PARAMETRIZED_TEST_DESIGN.md  PR_SUMMARY.md  README.md  ROBUST_PARSING_PLAN.md  ROBUST_PARSING_README.md  TASK_COMPLETION_SUMMARY.md  TEST_PATTERNS_ANALYSIS.md  analyze_timeout.py  check_test_conditionals.py  deadlock_analysis.md  debug_test.py  dependency_analysis.md  dependency_graph.md  integration_roadmap.md  pyproject.toml  requirements-dev.txt  requirements.txt  security_report.json  test_logging.py  test_timeout_demo.py  timeout_analysis_guide.md  timeout_analysis_summary.md
.devcontainer/: README.md  devcontainer.json  setup.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  general-improvement.md  general.yml  improvement-issue.md  security-issue.md  security.yml
.github/workflows/: test.yml
.trunk/: actions  logs  notifications  out  tools  trunk.yaml
.trunk/plugins/: trunk
docs/: README.md  SPEC.md
docs/architecture/: overview.md
docs/implementation/: robust-parsing.md
docs/testing/: test-patterns.md
scripts/: README.md  ci_workflow.py  quality_check.py  run_ci.bat  run_ci.sh  run_tests.sh  security_scan.py  wcp
src/: main.py  schema_processor.py  workflow_processor.py
src/processors/: env_var_processor.py  notebook_processor.py  prompt_processor.py  rule_processor.py
src/warp_content_processor/: __init__.py  base_processor.py  content_type.py  main.py  parse_yaml.py  processor_factory.py  schema_processor.py  workflow_processor.py
src/warp_content_processor/excavation/: __init__.py  archaeologist.py  artifacts.py  island_detector.py
src/warp_content_processor/parsers/: __init__.py  base.py  common_patterns.py  content_detector.py  document_splitter.py  intelligent_cleaner.py  robust_parser.py  yaml_strategies.py
src/warp_content_processor/processors/: __init__.py  env_var_processor.py  notebook_processor.py  prompt_processor.py  rule_processor.py  schema_processor.py  workflow_processor.py
src/warp_content_processor/utils/: normalizer.py  security.py  validation.py  yaml_parser.py
tests/: README.md  __init__.py  conftest.py  helpers.py  test_content_processor.py  test_example.py  test_logging.py  test_messy_content_integration.py  test_notebook_processor.py  test_notebook_processor.py.bak  test_notebook_processor_validation.py  test_parsers_regression.py  test_processors_regression.py  test_robust_parsing.py  test_security_normalization.py  test_smoke.py  test_utils.py  test_workflow_processor.py
tests/excavation/: __init__.py  test_archaeologist.py  test_artifacts.py  test_island_detector.py  test_island_detector.py.bak
tests/fixtures/: example_workflow.yaml  messy_mixed_content.yaml  mixed_content.yaml  sample_notebook.json  test_data.yaml
tests/processors/: test_env_var_processor.py
tests/utils/: __init__.py  assertions.py  fixtures.py  test_helpers.py  test_validation.py  test_yaml_parser.py
workflows/: conversion_report.md
